--- a/match-room.html
+++ b/match-room.html
@@ -3,37 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🔥 Match Room</title>
+  <title>Match Room</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#0d1321] text-white min-h-screen flex items-center justify-center px-4">
+<body class="bg-gray-900 text-white min-h-screen flex flex-col items-center justify-center p-4">
 
-  <div class="text-center space-y-6">
-    <h1 class="text-3xl font-bold">🔥 Match Room</h1>
+  <h1 class="text-3xl font-bold mb-6">🔥 Match Room</h1>
 
-    <div class="bg-[#1e293b] p-6 rounded-xl w-full max-w-md mx-auto">
-      <div class="flex items-center justify-between mb-4">
-        <div class="text-center">
-          <img id="player1-photo" src="" class="w-20 h-20 rounded-full border-4 border-blue-500 mx-auto" />
-          <p id="player1-name" class="mt-2">Waiting...</p>
-        </div>
-        <span class="text-xl font-bold">VS</span>
-        <div class="text-center">
-          <img id="player2-photo" src="" class="w-20 h-20 rounded-full border-4 border-red-500 mx-auto" />
-          <p id="player2-name" class="mt-2">Waiting...</p>
-        </div>
+  <div id="matchInfo" class="bg-gray-800 p-6 rounded-xl shadow-lg flex flex-col gap-6 w-full max-w-md text-center">
+    <div id="players" class="flex justify-around items-center gap-4">
+      <div class="flex flex-col items-center gap-2">
+        <img id="player1Photo" class="w-20 h-20 rounded-full border-4 border-blue-500" />
+        <p id="player1Name" class="font-semibold text-lg">Player 1</p>
       </div>
-      <p class="text-sm text-gray-400" id="match-id">Loading...</p>
-      <button id="readyBtn" class="mt-4 px-4 py-2 bg-green-600 rounded-xl font-semibold hover:bg-green-700 hidden">
-        ✅ Ready to Battle
-      </button>
+      <span class="text-3xl font-bold">VS</span>
+      <div class="flex flex-col items-center gap-2">
+        <img id="player2Photo" class="w-20 h-20 rounded-full border-4 border-red-500" />
+        <p id="player2Name" class="font-semibold text-lg">Player 2</p>
+      </div>
     </div>
+
+    <p id="matchId" class="text-sm text-gray-400"></p>
   </div>
 
+  <!-- Firebase Script -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-    import { getFirestore, doc, getDoc, updateDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyAp444Vi-iivVHmY-4f0A8YFraABgknkf4",
@@ -41,67 +38,61 @@
       projectId: "krish-d0206",
       storageBucket: "krish-d0206.appspot.com",
       messagingSenderId: "669277883647",
-      appId: "1:669277883647:web:59c952c78093e072a910ca"
+      appId: "1:669277883647:web:59c952c78093e072a910ca",
+      measurementId: "G-EQVQR43FEZ"
     };
 
     const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
     const db = getFirestore(app);
-
-    const player1Photo = document.getElementById("player1-photo");
-    const player2Photo = document.getElementById("player2-photo");
-    const player1Name = document.getElementById("player1-name");
-    const player2Name = document.getElementById("player2-name");
-    const matchIdText = document.getElementById("match-id");
-    const readyBtn = document.getElementById("readyBtn");
+    const auth = getAuth(app);
 
     const urlParams = new URLSearchParams(window.location.search);
     const matchId = urlParams.get("matchId");
-    let currentUser = null;
 
-    matchIdText.textContent = `Match ID: ${matchId}`;
+    document.getElementById("matchId").textContent = "Match ID: " + matchId;
 
-    onAuthStateChanged(auth, async (user) => {
-      if (user) {
-        currentUser = user;
-        const matchRef = doc(db, "roastMatches", matchId);
-        const matchSnap = await getDoc(matchRef);
-        if (matchSnap.exists()) {
-          const data = matchSnap.data();
-          // If player2 is empty and current user is not player1, assign as player2
-          if (!data.player2Info && data.player1 !== user.uid) {
-            await updateDoc(matchRef, {
-              player2: user.uid,
-              player2Info: {
-                name: user.displayName,
-                photo: user.photoURL
-              }
-            });
-          }
+    const player1Photo = document.getElementById("player1Photo");
+    const player1Name = document.getElementById("player1Name");
+    const player2Photo = document.getElementById("player2Photo");
+    const player2Name = document.getElementById("player2Name");
+
+    async function loadMatchData() {
+      const docRef = doc(db, "roastMatches", matchId);
+      const docSnap = await getDoc(docRef);
+
+      if (docSnap.exists()) {
+        const data = docSnap.data();
+
+        if (data.player1Info) {
+          player1Photo.src = data.player1Info.photoURL;
+          player1Name.textContent = data.player1Info.displayName;
+        } else {
+          player1Photo.src = "https://via.placeholder.com/80";
+          player1Name.textContent = "Waiting...";
         }
 
-        // Real-time updates
-        onSnapshot(matchRef, (docSnap) => {
-          const data = docSnap.data();
-          if (data.player1Info) {
-            player1Photo.src = data.player1Info.photo;
-            player1Name.textContent = data.player1Info.name;
-          }
-          if (data.player2Info) {
-            player2Photo.src = data.player2Info.photo;
-            player2Name.textContent = data.player2Info.name;
-          }
+        if (data.player2Info) {
+          player2Photo.src = data.player2Info.photoURL;
+          player2Name.textContent = data.player2Info.displayName;
+        } else {
+          player2Photo.src = "https://via.placeholder.com/80";
+          player2Name.textContent = "Waiting...";
+        }
 
-          // Show "Ready to Battle" button only when both players are joined
-          if (data.player1Info && data.player2Info) {
-            readyBtn.classList.remove("hidden");
-          }
-        });
       } else {
-        const provider = new GoogleAuthProvider();
-        signInWithPopup(auth, provider);
+        alert("❌ Match not found");
+      }
+    }
+
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        loadMatchData();
+      } else {
+        alert("⚠️ Please login first!");
+        window.location.href = "index.html";
       }
     });
   </script>
+
 </body>
 </html>
